Add Rakefile and port support

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   in every endeavor I undertake.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: ""
+port: 4000
+
 twitter_username: k3jph
 github_username:  k3jph
 sass:
