Added tagging...may need some more work, later

--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,12 @@ sass:
 
 paginate: 10
 paginate_path: "/blog/page/:num/"
+
+tag_page_layout: tag_page
+tag_page_dir: tag
+tag_page_data:
+  sitemap: false
+  title: "All Posts With Tag"
   
 # Build settings
 plugins:
@@ -48,6 +54,7 @@ plugins:
   - jekyll-seo-tag
   - jekyll-algolia
   - jekyll-paginate
+  - jekyll/tagging
 
 exclude:
   - .sass-cache/
