All new local search

--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,6 @@ plugins:
   - jekyll-sass-converter
   - jekyll-redirect-from
   - jekyll-seo-tag
-  - jekyll-algolia
   - jekyll-paginate
   - jekyll/tagging
   - jekyll-inline-svg
@@ -78,11 +77,5 @@ svg:
 # Iframely!
 iframely-key:       176ff6184ababb980170f6037497fb6a
 
-algolia:
-  application_id:       GI59X4R5CO
-  index_name:           jekyll-jameshoward-us
-  search_only_api_key:  867898ddd747a87edb66f2a825909281
-  # Exclude more files from indexing
-  files_to_exclude:
-    - tag.md
-    - blog.md
+redirect_from:
+  json: false
