--- a/_data/honors_ribbons.yaml
+++ b/_data/honors_ribbons.yaml
@@ -1,4 +1,4 @@
 - id: WAKTS
   type: westarctica
   img: /assets/img/ribbons/westarctica/WAKTS.svg
-  alt: "Knight of the Snowflake ribbon"
+  alt: "Knight of the Snowflake"
