Move /family to /ancestry, remove founding dates and replace with member number, and add OFFM medal

--- a/_config.yml
+++ b/_config.yml
@@ -40,9 +40,9 @@ collections:
     output: true
     permalink: /blog/:year/:month/:day/:slug
     type: "post"
-  family:
+  ancestry:
     output: true
-    permalink: /family/:slug
+    permalink: /ancestry/:slug
     type: "page"
 
 
