--- a/_data/hereditary_ribbons.yaml
+++ b/_data/hereditary_ribbons.yaml
@@ -1,30 +1,36 @@
 - id: HCGS-SBHC
   type: hereditary
   date: 2004-12-31
-  url: /family/hcgs/sbhc
+  url: /ancestry/hcgs/sbhc
   img: /assets/img/ribbons/hereditary/HCGS-SBHC.svg
   alt: "Settlers and Builders of Hamilton County"
 - id: OGS-CFO
   type: hereditary
   date: 2010-12-31
-  url: /family/ogs/cfo
+  url: /ancestry/ogs/cfo
   img: /assets/img/ribbons/hereditary/OGS-CFO.svg
   alt: "Century Families of Ohio"
 - id: HCGS-CFHC
   type: hereditary
   date: 2011-12-31
-  url: /family/hcgs/cfhc
+  url: /ancestry/hcgs/cfhc
   img: /assets/img/ribbons/hereditary/HCGS-CFHC.svg
   alt: "Century Families of Hamilton County"
 - id: NSDEQ
   type: hereditary-mini
   date: 1980-09-10
-  url: /family/nsdeq
+  url: /ancestry/nsdeq
   img: /assets/img/ribbons/hereditary/NSDEQ.svg
   alt: "National Society Descendants of Early Quakers"
 - id: HST
   type: hereditary-mini
   date: 2010-09-30
-  url: /family/hst
+  url: /ancestry/hst
   img: /assets/img/ribbons/hereditary/HST.svg
   alt: "Hereditary Society of Teachers"
+- id: OFFM
+  type: hereditary
+  date: 1999-04-17
+  url: /ancestry/offm
+  img: /assets/img/ribbons/hereditary/OFFM.svg
+  alt: "Order of the First Families of Maryland"
