Moving Copyright link

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -76,6 +76,8 @@ notices:
     url: /terms-of-use/
   - title: Privacy Policy
     url: /privacy-policy/
+  - title: Copyright
+    url: /copyright/
         
 social_media:
   - icon: bluesky
