Added GSWAR1812 information

--- a/_data/hereditary_ribbons.yaml
+++ b/_data/hereditary_ribbons.yaml
@@ -46,3 +46,9 @@
   url: /ancestry/nsdarw
   img: /assets/img/ribbons/hereditary/NSDARW.svg
   alt: "National Society Descendants of American Railroad Workers"
+- id: GSWAR1812
+  type: hereditary
+  date: 1814-09-14
+  url: /ancestry/gswar1812
+  img: /assets/img/ribbons/hereditary/GSWAR1812.svg
+  alt: "General Society of the War of 1812"
