Changed Bluesky name

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -82,7 +82,7 @@ notices:
 social_media:
   - icon: bluesky
     name: Bluesky
-    url: https://bsky.app/profile/k3jph.bsky.social
+    url: https://bsky.app/profile/jameshoward.us
   - icon: facebook
     name: Facebook
     url: https://facebook.com/k3jph
