Cleaned years out of ribbon alts

--- a/_data/hereditary_ribbons.yaml
+++ b/_data/hereditary_ribbons.yaml
@@ -39,7 +39,7 @@
   date: 2004-05-16
   url: /ancestry/gcat
   img: /assets/img/ribbons/hereditary/GCAT.svg
-  alt: "Guild of Colonial Artisans and Tradesmen 1607-1783"
+  alt: "Guild of Colonial Artisans and Tradesmen"
 - id: NSDARW
   type: hereditary
   date: 2021-02-28
@@ -81,7 +81,7 @@
   date: 2019-12-01
   url: /ancestry/dom
   img: /assets/img/ribbons/hereditary/DOM.svg
-  alt: "Descendants of Miners 1607-1907"
+  alt: "Descendants of Miners"
 - id: SDCC
   type: hereditary
   date: 1933-12-01
