--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -27,7 +27,10 @@ svg:
 # ===============================================================
 # Minifier / Compression Overrides
 # ===============================================================
-jekyll-minifier: {}  # effectively disables
+# ===============================================================
+jekyll-minifier:
+  exclude:
+    - "*"
 
 # ===============================================================
 # Responsive Image Handling
