Fixup to some development environment issues

--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -37,6 +37,7 @@ jekyll-minifier:
 # ===============================================================
 picture:
   enabled: false
+  ignore_missing_images: true
 
 # ===============================================================
 # Environment Flags
